[package]
name = "build-timestamp"
version = "0.1.0"
authors = ["AlephAlpha <alephalpha911@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
chrono = "0.4"
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
