[package]
authors = ["AlephAlpha <alephalpha911@gmail.com>"]
edition = "2018"
name = "build-timestamp"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
chrono = "0.4"
once_cell = "1.7"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["parsing"] }
