[package]
authors = ["AlephAlpha <alephalpha911@gmail.com>"]
categories = ["date-and-time", "development-tools", "rust-patterns"]
description = "Simple proc-macros to generate build timestamp string literals."
edition = "2018"
homepage = "https://github.com/AlephAlpha/build-time"
keywords = ["build", "proc_macro", "timestamp", "tool"]
license = "MIT"
name = "build-time"
readme = "README.md"
repository = "https://github.com/AlephAlpha/build-time"
version = "0.1.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
chrono = { version = "0.4.20", default-features = false, features = ["clock"] }
once_cell = "1.17"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["parsing"] }
